# ACME

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_USAGE.md  ARCHITECTURE.md  CHANGELOG.md  DECISION_LOG.md  Dockerfile  EVAL_RESULTS.md  FAILURE_MODES.md  Makefile  README.md  acme_user_guide.html  docker-compose.yml  plan_v2.md  pyproject.toml  ui_design_brief.md
.github/: refresh-contributors
.postman/: resources.yaml
_design_pkg/: pkg.tgz
_design_pkg/acme-ey/: README.md
_design_pkg/acme-ey/chats/: chat1.md
_design_pkg/acme-ey/project/: .design-canvas.state.json  Acme Assistant UI.html
infra/keycloak/: Dockerfile  acme-realm.json
infra/otel/: collector-config.yaml
infra/postgres/: Dockerfile  init.sql  seed.sql
infra/postgres/migrations/: d017_append_only_and_fk_links.sql  d018_realtime_triggers.sql  d019_delete_notifications.sql  d020_recommendation_rules.sql  d021_demo_edge_cases.sql  d022_security_hardening.sql
mcp_server/: .dockerignore  Dockerfile  pyproject.toml
mcp_server/src/acme_mcp/: db.py  recommendation_engine.py  schemas.py  server.py  tools.py  validation.py
prompts/: 01_scaffold_mcp_server.md  02_agent_planner.md  03_skills_registry.md  04_trace_viewer.md  05_eval_runner.md  README.md
scripts/: check_no_bom.py  install-git-hooks.ps1  install-git-hooks.sh
scripts/git-hooks/: prepare-commit-msg  strip-commit-msg-stdin.py
security/trivy/: README.md  SUMMARY.md  summary.json  trivy-fs-report.json  trivy-image-acme-app.json  trivy-image-acme-keycloak.json  trivy-image-acme-mcp-server.json  trivy-image-acme-postgres.json  trivy-image-jaeger-2.18.0.json  trivy-image-otel-collector-contrib-0.153.0.json  trivy-image-valkey-8.1-alpine.json
security/trivy/archive/: trivy-fs-report.json  trivy-image-acme-app.json  trivy-image-acme-mcp-server.json  trivy-image-jaeger-2.15.0.json  trivy-image-jaeger-2.18.0.json  trivy-image-jaeger-all-in-one-1.57.json  (+13 more)
src/acme_app/: config.py  main.py
src/acme_fde_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_adversarial.py  test_agent_planning.py  test_auth.py  test_chat_response_metadata.py  test_cost_table.py  test_eval_runner.py  test_evidence_routes.py  test_failure_modes.py  test_google_provider.py  test_idempotency.py  test_llm_availability.py  test_local_screener.py  test_mcp_tools.py  test_outbound_privacy.py  test_pii_redactor.py  test_propose_confirm.py  test_rbac.py  test_recommendation_engine.py  test_redis_memory.py  test_skills.py  test_traces.py  test_write_intent_guard.py
(+103 files in other folders)
