[project]
name = "acme-fde-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "redis>=5.0",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "jinja2>=3.1",
  "sse-starlette>=2.1",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "pre-commit>=3.7"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
